Fim do Exercício Paralelo Nº20

--- a/exp020/index.html
+++ b/exp020/index.html
@@ -12,7 +12,7 @@
         <h1>Como dois e dois são quatro</h1>
         <p>Ferreira Gullar</p>
     </header>
-    <section class="normal">
+    <section class="normal" id="img01">
         <section class="estrofe">
             <p>Como dois e dois são quatro</p> <br>
             <p>Sei que a vida vale a pena</p> <br>
@@ -21,7 +21,7 @@
         </section>
     </section>
 
-    <section class="imagem" id="img01">
+    <section class="imagem" id="img02">
         <section  class="estrofe">
             <p>Como teus olhos são claros</p> <br>
             <p>E a tua pele, morena</p> <br>
@@ -30,7 +30,7 @@
         </section>
     </section>
 
-    <section class="normal">
+    <section class="normal" id="img03">
         <section class="estrofe">
             <p>Como um tempo de alegria</p> <br>
             <p>Por trás do terror me acena</p> <br>
@@ -39,7 +39,7 @@
         </section>
     </section>
 
-    <section class="imagem" id="img02">
+    <section class="imagem" id="img04">
         <section class="estrofe">
             <p>Sei que dois e dois são quatro</p> <br>
             <p>Sei que a vida vale a pena</p> <br>
@@ -49,7 +49,7 @@
     </section>
 
     <footer>
-        Desenvolvido por Daniel Miranda Rodrigues
+        <p>Desenvolvido por Daniel Miranda Rodrigues</p>
     </footer>
 </body>
 </html>
