--- a/exp021/index.html
+++ b/exp021/index.html
@@ -55,9 +55,9 @@
         <caption>Candidatos</caption> 
         <thead>
             <tr>
-                <th>Nome</th>
-                <th>Peso</th>
-                <th>Idade</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Peso</th>
+                <th scope="col">Idade</th>
             </tr>
         </thead>
         <tbody>
@@ -79,7 +79,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Média</th>
+                <th scope="row">Média</th>
                 <td>64,6 Kg</td>
                 <td>37 anos</td>
             </tr>
